--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,3 +27,10 @@
 .current--course--value {
   font-size: 18px;
 }
+
+@media (max-width: 1200px) {
+  .header {
+    height: auto;
+    flex-wrap: wrap;
+  }
+}
